# shulkerscript-lang

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  grammar.md
.github/workflows/: publish.yml  test.yml
examples/: compiler.rs
scripts/: update_grammar_md.py
src/: lib.rs  public_helpers.rs  serde.rs  util.rs
src/base/: diagnostic.rs  error.rs  file_provider.rs  log.rs  mod.rs  source_file.rs
src/compile/: compiler.rs  error.rs  mod.rs
src/lexical/: error.rs  mod.rs  token.rs  token_stream.rs
src/semantic/: error.rs  mod.rs  scope.rs
src/syntax/: error.rs  mod.rs  parser.rs
src/syntax/syntax_tree/: condition.rs  declaration.rs  expression.rs  mod.rs  program.rs  statement.rs
src/syntax/syntax_tree/statement/: execute_block.rs
src/transpile/: checks.rs  conversions.rs  error.rs  expression.rs  function.rs  internal_functions.rs  lua.rs  mod.rs  transpiler.rs  util.rs  variables.rs
tests/parsing/: invalid.shu  main.rs  test1.shu
tests/transpiling/: main.rs  test1.shu
