[package]
name = "shulkerscript"
version = "0.1.0"
edition = "2021"

authors = ["Moritz Hölting <moritz@hoelting.dev>"]
description = "Shulkerscript language implementation with compiler"
categories = ["compilers", "game-development"]
keywords = ["minecraft", "datapack", "mcfunction"]
repository = "https://github.com/moritz-hoelting/shulkerscript-lang"
homepage = "https://shulkerscript.hoelting.dev/"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fs_access", "lua", "shulkerbox", "zip"]
fs_access = ["shulkerbox?/fs_access"]
lua = ["dep:mlua"]
serde = ["dep:serde", "shulkerbox?/serde"]
shulkerbox = ["dep:shulkerbox"]
zip = ["shulkerbox?/zip"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
path-absolutize = { version = "3.1.1", features = ["use_unix_paths_on_wasm"] }

[dependencies]
chksum-md5 = "0.0.0"
colored = "2.1.0"
derive_more = { version = "1.0.0", default-features = false, features = ["deref", "deref_mut", "from"] }
enum-as-inner = "0.6.0"
getset = "0.1.2"
itertools = "0.13.0"
mlua = { version = "0.10.0", features = ["lua54", "vendored"], optional = true }
path-absolutize = "3.1.1"
pathdiff = "0.2.2"
serde = { version = "1.0.214", features = ["derive", "rc"], optional = true }
shulkerbox = { version = "0.1.0", default-features = false, optional = true }
strsim = "0.11.1"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.65"
tracing = "0.1.40"
